--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jsonwebtoken": "^8.2.1",
     "rc": "1.0.1",
     "sails": "~0.12.4",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mongo": "0.12.3"
   },
   "scripts": {
     "debug": "node debug app.js",
