--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.4",
     "sails-disk": "~0.10.9",
+    "sails-hook-email": "^0.12.1",
     "sails-mongo": "0.12.3"
   },
   "scripts": {
