--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sails": "~0.12.4",
     "sails-disk": "~0.10.9",
     "sails-hook-email": "^0.12.1",
-    "sails-mongo": "0.12.3"
+    "sails-mongo": "0.12.3",
+    "swagger-ui": "^3.17.2"
   },
   "scripts": {
     "debug": "node debug app.js",
