--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "bcrypt": "^2.0.1",
+    "bcrypt": "^3.0.0",
     "include-all": "~0.1.6",
     "jsonwebtoken": "^8.2.1",
-    "rc": "1.0.1",
-    "sails": "~0.12.4",
-    "sails-disk": "~0.10.9",
+    "rc": "^1.2.8",
+    "sails": "^1.0.2",
+    "sails-disk": "^1.0.1",
     "sails-hook-email": "^0.12.1",
-    "sails-mongo": "0.12.3"
+    "sails-hook-orm": "^2.0.1",
+    "sails-hook-sockets": "^1.5.3",
+    "sails-mongo": "^1.0.1"
   },
   "scripts": {
     "debug": "node debug app.js",
