Fix problem with Forbidden responses. Duplicated value for users account.

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "url": "git://github.com/timi/auth-example.git"
   },
   "author": "timi",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "nodemon": "^1.17.5"
+  }
 }
