--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "bcrypt": "^3.0.0",
     "include-all": "~0.1.6",
     "jsonwebtoken": "^8.2.1",
+    "machinepack-mandrill": "^1.2.0",
     "rc": "^1.2.8",
     "sails": "^1.0.2",
     "sails-disk": "^1.0.1",
     "sails-hook-email": "^0.12.1",
     "sails-hook-orm": "^2.0.1",
     "sails-hook-sockets": "^1.5.3",
-    "sails-mongo": "^1.0.1"
+    "sails-mongo": "^1.0.1",
     "swagger-ui": "^3.17.2"
   },
   "scripts": {
