--- a/appspec.yml
+++ b/appspec.yml
@@ -5,18 +5,18 @@ files:
     destination: /home/ubuntu/api-release
 permissions:
   - object: /home/ubuntu/api-release
-    owner: ubuntu
-    group: ubuntu
+    owner: root
+    group: root
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
