--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,9 @@ npm-debug.log
 nbproject
 .idea
 .node_history
+
+################################################
+# Firebase Cloud Messages
+################################################
+
+fcm/*
