--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "dotenv": "^6.0.0",
     "firebase-admin": "^5.13.1",
     "include-all": "~0.1.6",
     "jsonwebtoken": "^8.2.1",
