--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "include-all": "~0.1.6",
     "jsonwebtoken": "^8.2.1",
     "mandrill-api": "^1.0.45",
+    "moment": "^2.22.2",
     "node-schedule": "^1.3.0",
     "rc": "^1.2.8",
     "sails": "^1.0.2",
